[Bug #77497]  - ATDW Highlights - View all Events link getting overlapped Added overlay hidden to not show extra content.

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_mosaic.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_mosaic.scss
@@ -451,6 +451,7 @@
   position: absolute;
   left: 50%;
   height: 100%;
+  overflow: hidden;
 }
 .mosaic-3column-front {
   display: table;
